2008-06-09  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/BuildOptions.pm (parse, set): Use space as the
	official separator in DEB_BUILD_OPTIONS. Check for validity of
	flags and print a warning if a bad option is detected. Rewrote
	the logic of set() to avoid adding options twice in non-overwrite
	mode.

2008-06-09  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Source/Package.pm ($diff_ignore_default_regexp): Add
	'.hgignore'.
	(@tar_ignore_default_pattern): Likewise.

2008-06-09  Guillem Jover  <guillem@debian.org>

	* src/query.c (searchfiles): Use VARBUF_INIT to initialize path
	instead of vb.

2008-06-04  Guillem Jover  <guillem@debian.org>

	* src/main.c (setpipe): Set file descriptors to close on exec.

2008-06-04  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (getfi): Use m_realloc instead of realloc.
	* dpkg-deb/info.c (info_spew): Likewise.
	* lib/fields.c (f_dependency): Likewise.
	* lib/parse.c (parsedb): Likewise.
	* lib/varbuf.c (varbufextend): Likewise.
	* src/main.c (commandfd): Likewise.

2008-06-04  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h (varbufinit): Add a size argument, fix all callers.
	(varbuf::init): Add an optional size argument.
	(varbuf::varbuf): Likewise.
	* lib/varbuf.c (varbufinit): Allocate a buffer if size is not zero.
	* lib/dbmodify.c (modstatdb_init): Use varbufinit instead of its
	own initialization.

2008-06-04  Guillem Jover  <guillem@debian.org>

	* lib/dpkg-db.h (VARBUF_INIT): New macro.
	* lib/compression.c (decompress_cat, compress_cat): Use VARBUF_INIT
	instead of varbufinit to initialize the variables.
	* lib/dump.c (writerecord, writedb): Likewise.
	* lib/mlib.c (buffer_copy_setup_dual): Likewise.
	* lib/showpkg.c (show1package): Likewise.
	* src/archives.c (check_breaks, check_conflict): Likewise.
	* src/configure.c (deferred_configure): Likewise.
	* src/depcon.c (describedepcon): Likewise.
	* src/main.c (commandfd): Likewise.