@@ -1,3 +1,8 @@
+2008-06-10  Guillem Jover  <guillem@debian.org>
+
+	* lib/varbuf.c (varbufprintf): Use varbufvprintf instead of
+	reimplementing it.
+
 2008-06-09  Guillem Jover  <guillem@debian.org>
 
 	* scripts/Dpkg/BuildOptions.pm (parse, set): Use space as the
